--- a/tests/fixtures/some-page-com.html
+++ b/tests/fixtures/some-page-com.html
@@ -1,14 +1,13 @@
 <!DOCTYPE html>
 <html lang="ru">
-   <head>
-      <meta charset="UTF-8">
-      <title>HTML Document</title>
-   </head>
-   <body>
-      <p>
-         <b>
-            Этот текст будет полужирным, <i>а этот — ещё и курсивным</i>.
-         </b>
-      </p>
-   </body>
+  <head>
+    <meta charset="utf-8">
+    <title>Курсы по программированию Хекслет</title>
+  </head>
+  <body>
+    <img src="https://python.png" alt="Иконка профессии Python-программист">
+    <h3>
+      <a href="/professions/python">Python-программист</a>
+    </h3>
+  </body>
 </html>
